# hydrotoolbox

./: .deepsource.toml  .gitignore  .gitmodules  .pre-commit-config.yaml  .sourcery.yaml  BADGES.rst  CHANGELOG.md  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.rst  publish.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: clean-workflow-runs.yml  tests.yml
docs/: command_line.rst  conf.py  function_summary.rst  index.rst  notebooks.rst
src/hydrotoolbox/: __init__.py  baseflow_sep.py  hydrotoolbox.py  utils.py
src/hydrotoolbox/baseflow/: __init__.py  comparison.py  param_estimate.py  separation.py  utils.py
src/hydrotoolbox/baseflow/methods/: Boughton.py  CM.py  Chapman.py  EWMA.py  Eckhardt.py  Fixed.py  Furey.py  LH.py  Local.py  Slide.py  UKIH.py  Willems.py  __init__.py  boughton.py  chapman.py  chapman_maxwell.py  cm.py  eckhardt.py  ewma.py  five_day.py  fixed.py  furey.py  general_form.py  ihacres.py  lh.py  local.py  lyne_hollick.py  slide.py  strict.py  ukih.py  willems.py
src/hydrotoolbox/indices/: indices.py  tmp.out
tests/: BEC_test.sh  Q_BEC_BE_6500.csv  black_earth_creek_05406500_flow.csv  black_earth_creek_05406500_test.sh  data_02239501.csv  data_baseflow_boughton.csv  data_baseflow_chapman.csv  data_baseflow_chapman_maxwell.csv  data_baseflow_cm.csv  data_baseflow_eckhardt.csv  data_baseflow_ewma.csv  data_baseflow_five_day.csv  data_baseflow_furey.csv  data_baseflow_ihacres.csv  data_baseflow_lh.csv  data_baseflow_lyne_hollick.csv  data_baseflow_strict.csv  data_baseflow_ukih.csv  data_baseflow_usgs_hysep_fixed.csv  data_baseflow_usgs_hysep_local.csv  data_baseflow_usgs_hysep_slide.csv  data_baseflow_willems.csv  data_boughton.csv  data_chapman.csv  data_cm.csv  data_eckhardt.csv  data_ewma.csv  data_five_day.csv  data_furey.csv  data_ihacres.csv  data_lh.csv  data_percentile_test.csv  data_short.csv  data_strict.csv  data_test_storm_events.csv  data_ukih.csv  data_usgs_hysep_fixed.csv  data_usgs_hysep_local.csv  data_usgs_hysep_slide.csv  data_willems.csv  (+12 more)
