[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]

[project]
name = "hydrotoolbox"
dynamic = ["version"]
readme = "README.rst"
description = "Command line script and Python library for analysis of flow time-series."
dependencies = [
    "cltoolbox >= 1.0.0",
    "dateparser",
    "numpy <2.0; python_version == '3.9'",
    "pandas[excel]",
    "pint!=0.21.*",
    "pint-pandas",
    "pydantic",
    "scipy",
    "tabulate"
]
authors = [
    {name = "Tim Cera", email = "tim@cerazone.net"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = [
    "time-series",
    "cli-app",
    "hydrology",
    "baseflow",
    "hydrograph-recession",
    "hydrographic"
]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.9"

[project.scripts]
hydrotoolbox = "hydrotoolbox.hydrotoolbox:main"

[project.urls]
documentation = "https://timcera.bitbucket.io/hydrotoolbox/docs/index.html#hydrotoolbox-documentation"
github = "https://github.com/timcera/hydrotoolbox"
bitbucket = "https://bitbucket.org/timcera/hydrotoolbox/src/main/"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "2.0.12"
version_files = ["VERSION"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
license-files = ["LICENSE.txt"]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
