[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm[simple]>=8",
    "setuptools>=80"
]

[project]
authors = [
    {email = "tim@cerazone.net", name = "Tim Cera"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
] # Get strings from http://pypi.python.org/pypi?%3Aaction=list_classifiers
dependencies = [
    "cltoolbox >= 1.0.0",
    "dateparser",
    "numpy",
    "pandas[excel]",
    "pint!=0.21.*",
    "pint-pandas",
    "pydantic",
    "scipy",
    "tabulate"
]
description = "Command line script and Python library for analysis of flow time-series."
dynamic = ["readme", "version"]
keywords = [
    "baseflow",
    "cli-app",
    "hydrograph-recession",
    "hydrographic",
    "hydrology",
    "time-series"
]
license = {text = "BSD-3-Clause"}
name = "hydrotoolbox"
requires-python = ">=3.10"

[project.scripts]
hydrotoolbox = "hydrotoolbox.hydrotoolbox:main"

[project.urls]
bitbucket = "https://bitbucket.org/timcera/hydrotoolbox/src/main/"
documentation = "https://timcera.bitbucket.io/hydrotoolbox/docs/index.html#hydrotoolbox-documentation"
github = "https://github.com/timcera/hydrotoolbox"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "2.2.0"
version_files = ["VERSION"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE.txt"]

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
